# codebased

./: .cbignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  out.txt  pyproject.toml  s.py  trash.db  trash.db-journal  vscode.py
.github/: push.yml
.github/workflows/: push.yml  release.yml
codebased/: GREETING.txt  __main__.py  app.py  background_worker.py  config.py  constants.py  core.py  editor.py  embeddings.py  exceptions.py  filesystem.py  gitignore.py  index.html  index.py  main.py  models.py  parser.py  search.py  segfault.py  settings.py  stats.py  storage.py  tui.py  ui.py  utils.py  web.py
codebased/migrations/: 000_initial.sql
crates/core/: main.rs
src/: main.rs
tests/: cli_test.rs  test_main.py  test_parser.py
