[package]
name = "codebased"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
path = "crates/core/main.rs"
name = "codebased"


[dependencies]
clap = "2.33"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"