[tool.poetry]
name = "codebased"
version = "0.1.7"
description = "AI-powered code search for the terminal."
authors = ["Max Conradt <mhconradt@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/codebased-sh/codebased"

[tool.poetry.dependencies]
python = "^3.9"
tree-sitter = "^0.22.3"
openai = "^1.42.0"
tree-sitter-c = "^0.21"
tree-sitter-c-sharp = "^0.21"
tree-sitter-cpp = "^0.21"
tree-sitter-go = "^0.21"
tree-sitter-java = "^0.21"
tree-sitter-javascript = "^0.21"
tree-sitter-php = "^0.22"
tree-sitter-python = "^0.23"
tree-sitter-ruby = "^0.21"
tree-sitter-rust = "^0.21"
tree-sitter-typescript = "^0.21"
faiss-cpu = "^1.8.0.post1"
toml = "^0.10.2"
tiktoken = "^0.7.0"
colorama = "^0.4.6"

[tool.poetry.scripts]
codebased = "codebased.__main__:cli"

[tool.poetry.group.dev.dependencies]
ipython = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
