[tool.poetry]
name = "codebased"
version = "0.2.5"
description = "AI-powered code search for the terminal."
authors = ["Max Conradt <mhconradt@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/codebased-sh/codebased"

[tool.poetry.dependencies]
python = "^3.9"
tree-sitter = "^0.22.3"
openai = "^1.42.0"
tree-sitter-c = "^0.21"
tree-sitter-c-sharp = "^0.21"
tree-sitter-cpp = "^0.21"
tree-sitter-go = "^0.21"
tree-sitter-java = "^0.21"
tree-sitter-javascript = "^0.21"
tree-sitter-php = "^0.22"
tree-sitter-python = "^0.23"
tree-sitter-ruby = "^0.21"
tree-sitter-rust = "^0.21"
tree-sitter-typescript = "^0.21"
faiss-cpu = "^1.8.0.post1"
toml = "^0.10.2"
tiktoken = "^0.7.0"
colorama = "^0.4.6"
watchdog = "^5.0.0"
gitignore-parser = "^0.1.11"
chardet = "^5.2.0"
textual = "^0.79.1"
typer = "^0.12.5"

[tool.poetry.scripts]
codebased = "codebased.main:cli"

[tool.poetry.group.dev.dependencies]
ipython = "^7.0"
textual-dev = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
